Import of TOKUHIROM/Smart-Args-0.10 from CPAN.
gitpan-cpan-distribution: Smart-Args
gitpan-cpan-version:      0.10
gitpan-cpan-path:         TOKUHIROM/Smart-Args-0.10.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -4,10 +4,14 @@ author:
   - 'Tokuhiro Matsuno <tokuhirom  slkjfd gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  MooseX::Types: 0
+  MouseX::Types: 0
+  Test::More: 0.96
+  Test::Requires: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+generated_by: 'Module::Install version 1.01'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,10 +23,12 @@ no_index:
     - t
     - xt
 requires:
-  Mouse: 0.82
-  PadWalker: 1.9
+  Exporter: 5.63
+  Mouse: 0.92
+  PadWalker: 1.92
   Scalar::Util: 1.21
+  perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/tokuhirom/p5-Smart-Args.git
-version: 0.09
+version: 0.10
