--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,21 @@
 ---
 abstract: 'argument validation for you'
 author:
-  - 'Tokuhiro Matsuno <tokuhirom  slkjfd gmail.com>'
+  - 'Tokuhiro Matsuno <tokuhirom@gmail.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
-  MooseX::Types: 0
+  Moose::Util::TypeConstraints: 0
+  MooseX::Types::Moose: 0
   MouseX::Types: 0
+  MouseX::Types::Mouse: 0
+  Test::Builder::Module: 0
   Test::More: 0.96
   Test::Requires: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.01'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.8.4, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,16 +23,30 @@ meta-spec:
 name: Smart-Args
 no_index:
   directory:
-    - inc
     - t
     - xt
+    - inc
+    - share
+    - eg
+    - examples
+    - author
+    - builder
+provides:
+  Smart::Args:
+    file: lib/Smart/Args.pm
+    version: 0.11
 requires:
   Exporter: 5.63
   Mouse: 0.92
+  Mouse::Util::TypeConstraints: 0
   PadWalker: 1.92
   Scalar::Util: 1.21
-  perl: 5.8.1
+  perl: 5.008001
 resources:
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/tokuhirom/p5-Smart-Args.git
-version: 0.10
+  bugtracker: https://github.com/tokuhirom/Smart-Args/issues
+  homepage: https://github.com/tokuhirom/Smart-Args
+  repository: git://github.com/tokuhirom/Smart-Args.git
+version: 0.11
+x_contributors:
+  - 'Fuji, Goro <gfuji@cpan.org>'
+  - 'Neil Bowers <neil@bowers.com>'
